examples/should-fail/f44_impred_codomain_type_as_prop.lean
def demo4_bad_codomain_type_as_prop : Prop :=
  ((A : Type) -> Type : Prop)
